updated title and fixed spacing in about-me styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ footer h2 {
 
 /*about-me styles begin*/
 #about-me h3 {
-  margin: 5px;
+  margin: 10px;
   font-size: 24px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-shadow: -1px -1px 1px rgba(94, 94, 246, .75), 1px -1px 1px rgba(94, 94, 246, .75), -1px 1px 1px rgba(94, 94, 246, .75), 1px 1px 1px rgba(94, 94, 246, .75);
@@ -186,7 +186,7 @@ footer h2 {
 #bio-image {
   width: 200px;
   height: 200px;
-  margin: 15px 0;
+  margin: 0;
   border-radius: 10px;
 }
 /*about-me styles end*/
